objects/blng__RevenueSchedule__c.object
<CustomObject>
    <customHelpPage>blng__revenueScheduleHelp</customHelpPage>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>AccountRevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Adjustments__c</fullName>
        <inlineHelpText>Total of all adjustments made to the Revenue Schedule.</inlineHelpText>
        <label>Adjustments</label>
        <summarizedField>blng__RevenueAdjustmentLine__c.blng__AdjustmentAmount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__RevenueAdjustmentLine__c.blng__Status__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__RevenueAdjustmentLine__c.blng__TargetRevenueSchedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__AllocatedRevenueAmount__c</fullName>
        <label>Revenue Allocation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Available__c</fullName>
        <formula>blng__TotalRevenueAmount__c -  (blng__RecognizedRevenueLastClosedPeriod__c +  blng__Unrecognized__c) + blng__Adjustments__c</formula>
        <inlineHelpText>All revenue for a revenue schedule that is available to be adjusted or distributed.</inlineHelpText>
        <label>Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyAmount__c</fullName>
        <label>Base Currency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXDate__c</fullName>
        <label>Base Currency FX Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrencyFXRate__c</fullName>
        <label>Base Currency FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__BaseCurrency__c</fullName>
        <label>Base Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>FinanceBookRevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingFinancePeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Finance Period</label>
        <referenceTo>blng__FinancePeriod__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>FinancePeriodRevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>ContractRevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Credit Note Item that is the source of this Revenue Schedule</inlineHelpText>
        <label>Credit Note Line</label>
        <referenceTo>blng__CreditNoteLine__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>RevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__DebitNoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Debit Note Item that is the source of this Revenue Schedule</inlineHelpText>
        <label>Debit Note Line</label>
        <referenceTo>blng__DebitNoteLine__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>RevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__DeferredBalance__c</fullName>
        <inlineHelpText>Current balance of unrecognized revenue.</inlineHelpText>
        <label>Deferred Balance (deprecated)</label>
        <summarizedField>blng__RevenueTransaction__c.blng__DeferredBalance__c</summarizedField>
        <summaryFilterItems>
            <field>blng__RevenueTransaction__c.blng__Status__c</field>
            <operation>equals</operation>
            <value>Recognized</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__RevenueTransaction__c.blng__RevenueSchedule__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__Deferred__c</fullName>
        <formula>blng__Unrecognized__c + blng__Available__c</formula>
        <inlineHelpText>Revenue that has not yet been recognized in the Revenue Schedule.</inlineHelpText>
        <label>Deferred</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__EstimatedRevenueTransactionCount__c</fullName>
        <label>Estimated Revenue Transaction Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>blng__FullRecognitionDate__c</fullName>
        <label>Full Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Invoice Item that is the source of this Revenue Schedule</inlineHelpText>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>InvoiceRevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Legal Entity where this Revenue will be recorded.</inlineHelpText>
        <label>Revenue Legal Entity</label>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>RevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Order Product that is the source of this Revenue Schedule</inlineHelpText>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>OrderProductsRevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RecognizedRevenueLastClosedPeriod__c</fullName>
        <inlineHelpText>Sum of all revenue that has been recognized through the current period</inlineHelpText>
        <label>Recognized</label>
        <summarizedField>blng__RevenueTransaction__c.blng__RevenueAmount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__RevenueTransaction__c.blng__Status__c</field>
            <operation>equals</operation>
            <value>Recognized</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__RevenueTransaction__c.blng__RevenueSchedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>blng__RevenueAgreementAllocationStatus__c</fullName>
        <label>Revenue Agreement Allocation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RevenueAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Agreement</label>
        <referenceTo>blng__RevenueAgreement__c</referenceTo>
        <relationshipLabel>Revenue Schedule</relationshipLabel>
        <relationshipName>RevenueScheduleRevenueAdjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueDistributionMethod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Amortization that will be used to spread revenue across periods. Defined on the assigned Revenue Rule</inlineHelpText>
        <label>Revenue Distribution Method</label>
        <referenceTo>blng__RevenueDistributionMethod__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>RevenueDistributionMethodRevenueSchedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueEndDate__c</fullName>
        <inlineHelpText>The end date of the Revenue Term as calculated using the Revenue Rule</inlineHelpText>
        <label>Revenue End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__RevenueExpectedAmount__c</fullName>
        <label>Revenue Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueFinanceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Finance Book where this Revenue will be recorded.</inlineHelpText>
        <label>Revenue Finance Book</label>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>RevenueFinanceBookRevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueLiabilityAmount__c</fullName>
        <label>Revenue Liability Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueMostLikelyAmount__c</fullName>
        <label>Revenue Most Likely Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>RevenueRecognitioGLRuleRevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>GLTreatmentRevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Revenue Recognition Policy used to define this Revenue Schedule</inlineHelpText>
        <label>Revenue Recognition Rule</label>
        <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
        <relationshipLabel>Revenue Schedules (Revenue Recognition Rule)</relationshipLabel>
        <relationshipName>RevenueRecRuleRevenueSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionTreatment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Lookup to the Revenue Treatment used to define this Revenue Schedule</inlineHelpText>
        <label>Revenue Recognition Treatment</label>
        <referenceTo>blng__RevenueRecognitionTreatment__c</referenceTo>
        <relationshipLabel>Revenue Schedules</relationshipLabel>
        <relationshipName>RevenueRecognitionTreaRevenueSchedules</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueStartDate__c</fullName>
        <inlineHelpText>The start date of the Revenue Term as calculated using the Revenue Rule</inlineHelpText>
        <label>Revenue Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__RevenueTransactionStatus__c</fullName>
        <inlineHelpText>&quot;Calculation status of the Revenue Schedule. Can be:

            Pending
            Queued
            Active
            Complete&quot;</inlineHelpText>
        <label>Revenue Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__RevenueScheduleStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TotalRevenueAmount__c</fullName>
        <inlineHelpText>Total amount of revenue that will be recognized in this Revenue Schedule.</inlineHelpText>
        <label>Total Revenue Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__Unrecognized__c</fullName>
        <inlineHelpText>Total of all revenue that is distributed to a Revenue Schedule but not yet recognized.</inlineHelpText>
        <label>Unrecognized</label>
        <summarizedField>blng__RevenueTransaction__c.blng__RevenueAmount__c</summarizedField>
        <summaryFilterItems>
            <field>blng__RevenueTransaction__c.blng__Status__c</field>
            <operation>notEqual</operation>
            <value>Recognized,Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>blng__RevenueTransaction__c.blng__RevenueSchedule__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Revenue Schedule</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__OrderProduct__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>